--- a/daili.yaml
+++ b/daili.yaml
@@ -35,32 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.21
-  maximum: 6.64
-  average: 6.39
-  UpdateDay: '2022-04-03T00:40:48.655978'
+  minimum: 6.65
+  maximum: 8.4
+  average: 7.67
+  UpdateDay: '2022-04-03T03:31:33.849256'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 15773
-- name: 101.91.121.247:50004@ss
-  server: 101.91.121.247
-  type: ss
-  country: "\U0001F1E8\U0001F1F3\u3010426\u8282\u70B9\u6C60\u3011CN"
-  port: 50004
-  password: '4415934295'
-  cipher: aes-256-cfb
-  success_rate: 100.0
-  minimum: 10.05
-  maximum: 11.7
-  average: 10.68
-  UpdateDay: '2022-04-03T00:39:16.357496'
-  PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 13143
+  Rank: 15774
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -69,12 +55,26 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 10.03
-  maximum: 15.16
-  average: 13.24
-  UpdateDay: '2022-04-02T21:34:14.076996'
+  minimum: 10.31
+  maximum: 18.16
+  average: 14.73
+  UpdateDay: '2022-04-03T03:34:17.660073'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 13125
+  Rank: 13227
+- name: 101.91.121.247:50004@ss
+  server: 101.91.121.247
+  port: 50004
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: '4415934295'
+  cipher: aes-256-cfb
+  success_rate: 100.0
+  minimum: 9.36
+  maximum: 10.63
+  average: 9.88
+  UpdateDay: '2022-04-03T03:35:13.312204'
+  PFirstFoundDay: '2022-03-11T23:29:04.876882'
+  Rank: 13146
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -84,12 +84,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 35.29
-  maximum: 43.93
-  average: 38.41
-  UpdateDay: '2022-04-03T00:40:48.777556'
+  minimum: 37.05
+  maximum: 43.22
+  average: 40.76
+  UpdateDay: '2022-04-03T03:35:13.417098'
   PFirstFoundDay: '2022-03-13T18:25:19.181411'
-  Rank: 9708
+  Rank: 9710
 - name: fsyd.wecanfly.top:51133@trojan
   server: fsyd.wecanfly.top
   port: 51133
@@ -99,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.48
-  maximum: 47.28
-  average: 44.0
-  UpdateDay: '2022-04-03T00:40:48.796517'
+  minimum: 34.82
+  maximum: 43.05
+  average: 37.91
+  UpdateDay: '2022-04-03T03:35:13.428522'
   PFirstFoundDay: '2022-03-13T18:26:04.261665'
-  Rank: 8765
+  Rank: 8818
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -114,27 +114,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 97.81
-  maximum: 117.43
-  average: 106.44
-  UpdateDay: '2022-04-03T00:40:48.990453'
+  minimum: 43.93
+  maximum: 44.35
+  average: 44.08
+  UpdateDay: '2022-04-03T03:35:13.847963'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 8017
+  Rank: 8019
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 76.68
-  maximum: 87.74
-  average: 83.64
-  UpdateDay: '2022-04-03T00:40:48.924398'
+  minimum: 73.89
+  maximum: 76.18
+  average: 74.7
+  UpdateDay: '2022-04-03T03:35:13.947852'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 7659
+  Rank: 7663
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -147,37 +147,37 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 7397
+  Rank: 7497
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.1
-  maximum: 37.27
-  average: 21.1
-  UpdateDay: '2022-04-03T00:40:48.729656'
+  minimum: 38.16
+  maximum: 81.84
+  average: 53.53
+  UpdateDay: '2022-04-03T03:31:33.964578'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 7357
+  Rank: 7358
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.7
-  maximum: 58.46
-  average: 54.98
-  UpdateDay: '2022-04-03T00:40:48.835872'
+  minimum: 49.71
+  maximum: 57.68
+  average: 52.42
+  UpdateDay: '2022-04-03T03:31:51.950573'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 6464
+  Rank: 6465
 - name: 117.28.243.164:8007@ss
   server: 117.28.243.164
   type: ss
@@ -216,12 +216,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.64
-  maximum: 48.94
-  average: 43.64
-  UpdateDay: '2022-04-02T21:34:14.370757'
+  minimum: 37.59
+  maximum: 46.38
+  average: 42.33
+  UpdateDay: '2022-04-03T03:34:17.750791'
   PFirstFoundDay: '2022-03-14T10:28:30.211351'
-  Rank: 4671
+  Rank: 4672
+- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  server: jp-tyo-04-tr.cdn.savoy.click
+  port: 889
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
+  password: SfobRIcergHchqBFzzua
+  skip-cert-verify: true
+  udp: true
+  success_rate: 100.0
+  minimum: 37.56
+  maximum: 39.38
+  average: 38.44
+  UpdateDay: '2022-04-03T03:35:13.431260'
+  PFirstFoundDay: '2022-03-20T12:36:16.101193'
+  Rank: 3819
 - alterId: 0
   cipher: auto
   http-opts:
@@ -247,40 +262,25 @@ proxies:
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
   Rank: 3807
-- name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
-  server: jp-tyo-04-tr.cdn.savoy.click
-  port: 889
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
-  skip-cert-verify: true
-  udp: true
-  success_rate: 100.0
-  minimum: 37.36
-  maximum: 47.54
-  average: 41.64
-  UpdateDay: '2022-04-03T00:40:48.787623'
-  PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 3766
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: 28d98f761aca9d636f44db62544628eb
+  password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 266.02
-  maximum: 269.19
-  average: 268.03
-  UpdateDay: '2022-04-03T00:40:49.481849'
+  minimum: 243.49
+  maximum: 255.75
+  average: 249.54
+  UpdateDay: '2022-04-03T03:35:14.481334'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 3667
+  Rank: 3697
 - name: 139.162.122.205:3845@vmess
   server: 139.162.122.205
   type: vmess
-  country: "\U0001F1EF\U0001F1F5\u3010426\u8282\u70B9\u6C60\u3011JP"
+  country: "\U0001F1EF\U0001F1F5JP"
   port: 3845
   uuid: 76d5c6e3-c74c-3406-b9e8-9859d0a71c56
   alterId: 0
@@ -291,12 +291,12 @@ proxies:
   h2-opts: {}
   skip-cert-verify: true
   success_rate: 100.0
-  minimum: 37.83
-  maximum: 49.43
-  average: 41.73
-  UpdateDay: '2022-04-03T00:39:37.588415'
+  minimum: 37.28
+  maximum: 49.72
+  average: 43.49
+  UpdateDay: '2022-04-03T03:31:51.927147'
   PFirstFoundDay: '2022-03-25T03:32:43.804338'
-  Rank: 3386
+  Rank: 3387
 - name: 54.179.225.210:28443@trojan
   server: 54.179.225.210
   type: trojan
@@ -306,12 +306,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 73.27
-  maximum: 78.07
-  average: 76.3
-  UpdateDay: '2022-04-02T21:34:15.921519'
+  minimum: 77.2
+  maximum: 78.2
+  average: 77.66
+  UpdateDay: '2022-04-03T03:34:20.014860'
   PFirstFoundDay: '2022-03-24T21:35:30.855768'
-  Rank: 3103
+  Rank: 3154
 - name: s3.upyun.online:12340@trojan
   server: s3.upyun.online
   type: trojan
@@ -350,8 +350,8 @@ proxy-groups:
   strategy: consistent-hashing
   proxies:
   - 101.132.192.212:30003@ss
-  - 101.91.121.247:50004@ss
   - music.desperadoj.com:30003@ss
+  - 101.91.121.247:50004@ss
   - cscu.wecanfly.top:51132@trojan
   - fsyd.wecanfly.top:51133@trojan
   - 106.180.225.69:1443@trojan
@@ -362,8 +362,8 @@ proxy-groups:
   - 117.28.243.164:8007@ss
   - gzcm.v2hub.top:19321@trojan
   - gzcm.v2hub.top:19221@trojan
-  - 35.153.162.49:27080@vmess
   - jp-tyo-04-tr.cdn.savoy.click:889@trojan
+  - 35.153.162.49:27080@vmess
   - 184.168.127.50:443@trojan
   - 139.162.122.205:3845@vmess
   - 54.179.225.210:28443@trojan
