--- a/daili.yaml
+++ b/daili.yaml
@@ -133,7 +133,7 @@ proxies:
   average: 83.03
   UpdateDay: '2022-04-03T06:35:31.749757'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 7668
+  Rank: 7718
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -205,7 +205,7 @@ proxies:
   average: 84.17
   UpdateDay: '2022-03-26T15:30:36.038919'
   PFirstFoundDay: '2022-03-13T18:26:32.488088'
-  Rank: 5753
+  Rank: 5603
 - name: gzcm.v2hub.top:19221@trojan
   server: gzcm.v2hub.top
   type: trojan
@@ -326,21 +326,21 @@ proxies:
   UpdateDay: '2022-04-02T15:33:02.937949'
   PFirstFoundDay: '2022-03-11T23:24:03.315205'
   Rank: 2558
-- name: s3.upyun.online:12340@trojan
-  server: s3.upyun.online
+- name: 3.0.180.140:28443@trojan
+  server: 3.0.180.140
   type: trojan
-  country: "\U0001F1E8\U0001F1F3\u3010426\u8282\u70B9\u6C60\u3011CN"
-  port: 12340
-  password: 4809af3e-b8f2-4f07-9cfb-79d0a7bb1219
+  country: "\U0001F1F8\U0001F1EC SG"
+  port: 28443
+  password: a7d0812a-f8e3-45f9-9a57-b2b3392d765b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 24.35
-  maximum: 27.07
-  average: 25.71
-  UpdateDay: '2022-04-02T15:33:03.434058'
-  PFirstFoundDay: '2022-03-13T18:25:54.765840'
-  Rank: 2520
+  minimum: 68.97
+  maximum: 75.13
+  average: 71.35
+  UpdateDay: '2022-04-03T06:34:50.023926'
+  PFirstFoundDay: '2022-03-24T21:35:30.727560'
+  Rank: 2541
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -367,7 +367,7 @@ proxy-groups:
   - 139.162.122.205:3845@vmess
   - 54.179.225.210:28443@trojan
   - s4.upyun.online:12340@trojan
-  - s3.upyun.online:12340@trojan
+  - 3.0.180.140:28443@trojan
   tolerance: 250
 rule-providers:
   anting:
