--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.73
   UpdateDay: '2022-04-03T15:12:55.357368'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 16156
+  Rank: 16231
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -191,7 +191,7 @@ proxies:
   average: 40.52
   UpdateDay: '2022-04-02T15:34:33.698502'
   PFirstFoundDay: '2022-03-14T10:28:30.408415'
-  Rank: 5954
+  Rank: 5998
 - name: 117.28.243.164:8007@ss
   server: 117.28.243.164
   type: ss
@@ -245,7 +245,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 3873
+  Rank: 3917
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -480,6 +480,11 @@ rules:
 - PROCESS-NAME,Folx,DIRECT
 - DOMAIN,clash.razord.top,PG-default
 - DOMAIN,yacd.haishan.me,PG-default
+- DOMAIN-SUFFIX,wsj.com,PG-default
+- DOMAIN-SUFFIX,126.com,PG-default
+- DOMAIN-SUFFIX,t66y.com,PG-default
+- DOMAIN-SUFFIX,gitbook.com,PG-default
+- DOMAIN-SUFFIX,identitytoolkit.googleapis.com,PG-default
 - DOMAIN-SUFFIX,github.com,PG-default
 - DOMAIN-SUFFIX,githubusercontents.com,PG-default
 - RULE-SET,anting,PG-default
