--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.73
   UpdateDay: '2022-04-03T15:12:55.357368'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 16331
+  Rank: 16406
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -59,7 +59,7 @@ proxies:
   average: 1152.24
   UpdateDay: '2022-04-03T15:12:52.040309'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 13553
+  Rank: 13653
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -103,7 +103,7 @@ proxies:
   average: 41.23
   UpdateDay: '2022-04-03T15:12:01.312309'
   PFirstFoundDay: '2022-03-13T18:26:04.261665'
-  Rank: 9065
+  Rank: 9099
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   type: trojan
@@ -176,7 +176,7 @@ proxies:
   average: 552.65
   UpdateDay: '2022-04-03T15:12:02.916500'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 6789
+  Rank: 6865
 - name: gzcm.v2hub.top:19321@trojan
   server: gzcm.v2hub.top
   type: trojan
@@ -205,7 +205,7 @@ proxies:
   average: 84.17
   UpdateDay: '2022-03-26T15:30:36.038919'
   PFirstFoundDay: '2022-03-13T18:26:32.488088'
-  Rank: 5303
+  Rank: 5153
 - name: gzcm.v2hub.top:19221@trojan
   server: gzcm.v2hub.top
   type: trojan
@@ -235,7 +235,7 @@ proxies:
   average: 42.17
   UpdateDay: '2022-04-03T15:12:55.518679'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 3927
+  Rank: 3977
 - alterId: 0
   cipher: auto
   http-opts:
@@ -310,7 +310,7 @@ proxies:
   average: 75.6
   UpdateDay: '2022-04-03T15:12:03.911046'
   PFirstFoundDay: '2022-03-24T21:35:30.855768'
-  Rank: 3307
+  Rank: 3357
 - name: 3.0.180.140:28443@trojan
   server: 3.0.180.140
   type: trojan
@@ -326,21 +326,21 @@ proxies:
   UpdateDay: '2022-04-03T15:12:03.913765'
   PFirstFoundDay: '2022-03-24T21:35:30.727560'
   Rank: 2743
-- name: gdyd.xxcv.cc:42001@trojan
-  server: gdyd.xxcv.cc
+- name: 13.213.36.49:28443@trojan
+  server: 13.213.36.49
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
-  port: 42001
+  country: "\U0001F1FA\U0001F1F8 US"
+  port: 28443
   password: a7d0812a-f8e3-45f9-9a57-b2b3392d765b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.54
-  maximum: 52.28
-  average: 43.37
-  UpdateDay: '2022-04-03T15:12:01.321465'
-  PFirstFoundDay: '2022-03-24T21:35:30.949309'
-  Rank: 2510
+  minimum: 72.27
+  maximum: 77.48
+  average: 74.12
+  UpdateDay: '2022-04-03T15:12:37.055590'
+  PFirstFoundDay: '2022-03-25T03:36:12.961032'
+  Rank: 2546
 proxy-groups:
 - name: PG-default
   type: url-test
@@ -367,7 +367,7 @@ proxy-groups:
   - 139.162.122.205:3845@vmess
   - 54.179.225.210:28443@trojan
   - 3.0.180.140:28443@trojan
-  - gdyd.xxcv.cc:42001@trojan
+  - 13.213.36.49:28443@trojan
   tolerance: 250
 rule-providers:
   anting:
