--- a/daili2.yaml
+++ b/daili2.yaml
@@ -1,7 +1,7 @@
 mixed-port: 808
 redir-port: 3333
 allow-lan: false
-mode: rule
+mode: global
 log-level: debug
 external-controller: 0.0.0.0:9090
 secret: route
@@ -176,7 +176,7 @@ proxies:
   average: 552.65
   UpdateDay: '2022-04-03T15:12:02.916500'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 7788
+  Rank: 7843
 - name: gzcm.v2hub.top:19321@trojan
   server: gzcm.v2hub.top
   type: trojan
